@@ -441,8 +441,7 @@ void common_boot(int biosdev)
 			}
 		}
 
-        
-		// Notify moduals that we are attempting to boot
+		// Notify modules that we are attempting to boot
 		execute_hook("PreBoot", NULL, NULL, NULL, NULL);
 
 		if (!getBoolForKey (kWake, &tryresume, &bootInfo->chameleonConfig)) {
